[Bug #165367105] Apply LAF feedback on UI

--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -59,7 +59,10 @@
             <table id="view-users">
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>Account number</th>
+                        <th class="removeCol">Name</th>
+                        <th class="removeCol">Created on</th>
+                        <th class="removeCol">Branch</th>
                         <th>Balance</th>
                         <th>Delete</th>
                     </tr>
@@ -67,45 +70,16 @@
                 <tbody>
                     <tr class="view">
                         <td>
+                            <a href="admin-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
                             <a href="admin-one-user.html">Nkurunziza Joseph</a> 
                         </td>
-                        <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">20 April 2018</a> 
                         </td>
-                        <td>
-                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                            <td>
-                                <a href="admin-one-user.html">Nkurunziza Joseph</a> 
-                            </td>
-                            <td>
-                                <a href="admin-one-user.html">500000frw</a>
-                            </td>
-
-                        <td>
-                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                        <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">500000frw</a>
-                        </td>
-
-                        <td>
-                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                        <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Kigali</a> 
                         </td>
                         <td>
                             <a href="admin-one-user.html">500000frw</a>
@@ -117,12 +91,20 @@
 
                     <tr class="view">
                         <td>
+                            <a href="admin-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
                             <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Kigali</a> 
                         </td>
                         <td>
                             <a href="admin-one-user.html">500000frw</a>
                         </td>
-
                         <td>
                             <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
@@ -130,12 +112,83 @@
 
                     <tr class="view">
                         <td>
+                            <a href="admin-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
                             <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Kigali</a> 
                         </td>
                         <td>
                             <a href="admin-one-user.html">500000frw</a>
                         </td>
+                        <td>
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
+                        </td>
+                    </tr>
 
+                    <tr class="view">
+                        <td>
+                            <a href="admin-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Kigali</a> 
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">500000frw</a>
+                        </td>
+                        <td>
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
+                        </td>
+                    </tr>
+
+                    <tr class="view">
+                        <td>
+                            <a href="admin-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Kigali</a> 
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">500000frw</a>
+                        </td>
+                        <td>
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
+                        </td>
+                    </tr>
+
+                    <tr class="view">
+                        <td>
+                            <a href="admin-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="admin-one-user.html">Kigali</a> 
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">500000frw</a>
+                        </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
