--- a/UI/html/history.html
+++ b/UI/html/history.html
@@ -72,18 +72,34 @@
             <table>
                 <thead>
                     <tr>
+                        <th class="removeCol">Account number</th>
+                        <th class="removeCol">Name</th>
                         <th>type</th>
+                        <th class="removeCol">Date</th>
                         <th>Amount</th>
+                        <th class="removeCol">Old balance</th>
                         <th>New Balance</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="view">
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">678987</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">Nkurunziza Joseph</a>
+                        </td>
                         <td> 
                             <a href="one-transaction.html">Debit</a>
                         </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">20 April 2018</a>
+                        </td>
                         <td>
                             <a href="one-transaction.html">100000frw</a>
+                        </td>
+                        <td class="removeCol">
+                            <a href="one-transaction.html">500000frw</a>
                         </td>
                         <td> 
                             <a href="one-transaction.html">400000frw</a>
@@ -91,50 +107,98 @@
                     </tr>
 
                     <tr class="view">
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">678987</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">Nkurunziza Joseph</a>
+                        </td>
                         <td> 
-                            Debit
+                            <a href="one-transaction.html">Debit</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">20 April 2018</a>
                         </td>
                         <td>
-                            100000frw
+                            <a href="one-transaction.html">100000frw</a>
+                        </td>
+                        <td class="removeCol">
+                            <a href="one-transaction.html">500000frw</a>
                         </td>
                         <td> 
-                            400000frw
+                            <a href="one-transaction.html">400000frw</a>
                         </td>
                     </tr>
 
                     <tr class="view">
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">678987</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">Nkurunziza Joseph</a>
+                        </td>
                         <td> 
-                            Debit
+                            <a href="one-transaction.html">Debit</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">20 April 2018</a>
                         </td>
                         <td>
-                            100000frw
+                            <a href="one-transaction.html">100000frw</a>
+                        </td>
+                        <td class="removeCol">
+                            <a href="one-transaction.html">500000frw</a>
                         </td>
                         <td> 
-                            400000frw
+                            <a href="one-transaction.html">400000frw</a>
                         </td>
                     </tr>
 
                     <tr class="view">
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">678987</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">Nkurunziza Joseph</a>
+                        </td>
                         <td> 
-                            Debit
+                            <a href="one-transaction.html">Debit</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">20 April 2018</a>
                         </td>
                         <td>
-                            100000frw
+                            <a href="one-transaction.html">100000frw</a>
+                        </td>
+                        <td class="removeCol">
+                            <a href="one-transaction.html">500000frw</a>
                         </td>
                         <td> 
-                            400000frw
+                            <a href="one-transaction.html">400000frw</a>
                         </td>
                     </tr>
 
                     <tr class="view">
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">678987</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">Nkurunziza Joseph</a>
+                        </td>
                         <td> 
-                            Debit
+                            <a href="one-transaction.html">Debit</a>
+                        </td>
+                        <td class="removeCol"> 
+                            <a href="one-transaction.html">20 April 2018</a>
                         </td>
                         <td>
-                            100000frw
+                            <a href="one-transaction.html">100000frw</a>
+                        </td>
+                        <td class="removeCol">
+                            <a href="one-transaction.html">500000frw</a>
                         </td>
                         <td> 
-                            400000frw
+                            <a href="one-transaction.html">400000frw</a>
                         </td>
                     </tr>
                                          
