--- a/UI/html/one-transaction.html
+++ b/UI/html/one-transaction.html
@@ -63,7 +63,7 @@
                     <th class="transa"></th>
                     <tr>
                         <td class="transa">Account number</td>
-                        <td class="transa">0056-678987-5467</td>
+                        <td class="transa">678987</td>
                     </tr>
                     <tr>
                         <td class="transa">Name</td>
