Make some pages reposnsive

--- a/UI/html/signin.html
+++ b/UI/html/signin.html
@@ -50,7 +50,7 @@
         <!--Login form-->
         <div class="allForm" id="signin">
             <h2>Signin to Banka</h2>
-            <form action="profile.html" method="POST">
+            <form action="profile.html" method="">
                 
                 <div class="inputBox">
                     <input autocomplete="off" type="email" name="email"  required>
