--- a/UI/html/staff.html
+++ b/UI/html/staff.html
@@ -70,40 +70,19 @@
                 <tbody>
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">678987</a> 
+                            <a href="staff-one-user.html">678987</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">20 April 2018</a> 
+                            <a href="staff-one-user.html">20 April 2018</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Kigali</a> 
+                            <a href="staff-one-user.html">Kigali</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
-                        </td>
-                        <td>
-                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                        <td>
-                            <a href="admin-one-user.html">678987</a> 
-                        </td>
-                        <td class="removeCol">
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
-                        </td>
-                        <td class="removeCol">
-                            <a href="admin-one-user.html">20 April 2018</a> 
-                        </td>
-                        <td class="removeCol">
-                            <a href="admin-one-user.html">Kigali</a> 
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
@@ -112,40 +91,19 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">678987</a> 
+                            <a href="staff-one-user.html">678987</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">20 April 2018</a> 
+                            <a href="staff-one-user.html">20 April 2018</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Kigali</a> 
+                            <a href="staff-one-user.html">Kigali</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
-                        </td>
-                        <td>
-                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                        <td>
-                            <a href="admin-one-user.html">678987</a> 
-                        </td>
-                        <td class="removeCol">
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
-                        </td>
-                        <td class="removeCol">
-                            <a href="admin-one-user.html">20 April 2018</a> 
-                        </td>
-                        <td class="removeCol">
-                            <a href="admin-one-user.html">Kigali</a> 
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
@@ -154,19 +112,19 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">678987</a> 
+                            <a href="staff-one-user.html">678987</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">20 April 2018</a> 
+                            <a href="staff-one-user.html">20 April 2018</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Kigali</a> 
+                            <a href="staff-one-user.html">Kigali</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
@@ -175,19 +133,61 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">678987</a> 
+                            <a href="staff-one-user.html">678987</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">20 April 2018</a> 
+                            <a href="staff-one-user.html">20 April 2018</a> 
                         </td>
                         <td class="removeCol">
-                            <a href="admin-one-user.html">Kigali</a> 
+                            <a href="staff-one-user.html">Kigali</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
+                        </td>
+                        <td>
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
+                        </td>
+                    </tr>
+
+                    <tr class="view">
+                        <td>
+                            <a href="staff-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="staff-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="staff-one-user.html">Kigali</a> 
+                        </td>
+                        <td>
+                            <a href="staff-one-user.html">500000frw</a>
+                        </td>
+                        <td>
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
+                        </td>
+                    </tr>
+
+                    <tr class="view">
+                        <td>
+                            <a href="staff-one-user.html">678987</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="staff-one-user.html">20 April 2018</a> 
+                        </td>
+                        <td class="removeCol">
+                            <a href="staff-one-user.html">Kigali</a> 
+                        </td>
+                        <td>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
