Make some pages reposnsive

--- a/UI/html/staff-one-user.html
+++ b/UI/html/staff-one-user.html
@@ -57,7 +57,7 @@
         </div>
         <!--Registration form-->
         <div class="profile">
-            <div class="pro-image">
+            <div class="pro-image-staff">
                 <img src="../assets/icons/man.svg" alt="Profile">
             </div>
 
