Make app responsive to all devices

--- a/UI/html/admin-crt-acc.html
+++ b/UI/html/admin-crt-acc.html
@@ -75,6 +75,11 @@
                     <label for="email">Email</label>
                 </div>
 
+                <div class="inputBox">
+                    <input autocomplete="off" type="password" name="password"  required>
+                    <label for="password">Password</label>
+                </div>
+
                 <div class="inputBox">          
                     <select name="">
                         <option value="">User type</option>
