--- a/UI/html/create-account.html
+++ b/UI/html/create-account.html
@@ -90,7 +90,7 @@
                 
                 <div class="inputBox">          
                     <input autocomplete="off" type="text" name="branch" minlength="3" required>
-                    <label for="password">Branch</label>
+                    <label for="branch">Branch</label>
                 </div>
 
                 <div class="inputBox">          
